--- a/build.gradle
+++ b/build.gradle
@@ -36,15 +36,15 @@ dependencies {
 		exclude group: 'commons-logging', module: 'commons-logging'
 	}
 
-	compile "com.fasterxml.jackson.core:jackson-databind:" + versions.jackson
-	compile "com.fasterxml.jackson.core:jackson-annotations:" + versions.jackson
-
 	compile 'org.eclipse.persistence:javax.persistence:2.1.1'
 	compile "org.flywaydb:flyway-core:4.0"
-
 	compile 'org.hibernate:hibernate-validator:5.2.4.Final'
+
 	compile 'javax.mail:javax.mail-api:1.5.5'
 	compile 'javax.inject:javax.inject:1'
+
+	compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+	compile 'org.apache.cxf:cxf-rt-frontend-jaxrs:3.1.6'
 
 	compile 'org.slf4j:slf4j-api:1.7.18'
 	compile 'ch.qos.logback:logback-classic:1.1.6'
@@ -52,10 +52,8 @@ dependencies {
 	compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
 	compileOnly "org.apache.tomcat:tomcat-jdbc:${versions.tomcat}"
 
-	runtime 'commons-fileupload:commons-fileupload:1.3.1'
 	runtime 'mysql:mysql-connector-java:5.1.38'
 	runtime 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
-	runtime "com.fasterxml.jackson.core:jackson-core:" + versions.jackson
 
 	tomcat "org.apache.tomcat.embed:tomcat-embed-core:${versions.tomcat}"
 	tomcat "org.apache.tomcat.embed:tomcat-embed-jasper:${versions.tomcat}"
