added test email login

--- a/user-core/src/main/resources/config.properties
+++ b/user-core/src/main/resources/config.properties
@@ -8,6 +8,6 @@ db.showSql=false
 
 email.host=smtp.gmail.com
 email.port=587
-email.username=nicolas.m.lacombe@gmail.com
-email.password=PASSWORD
+email.username=test160424@gmail.com
+email.password=testpass
 email.senderName=user-core
