added dependency on config-core and moved some email properties to config-core

--- a/user-core/src/main/resources/config.properties
+++ b/user-core/src/main/resources/config.properties
@@ -6,8 +6,6 @@ db.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 #org.hibernate.dialect.MySQL5Dialect
 db.showSql=false
 
-email.host=smtp.gmail.com
-email.port=587
-email.username=test160424@gmail.com
-email.password=testpass
 email.senderName=user-core
+
+core.config.url=http://config.maatvirtue.net/1
