updated config-core url

--- a/user-core/src/main/resources/config.properties
+++ b/user-core/src/main/resources/config.properties
@@ -8,4 +8,4 @@ db.showSql=false
 
 email.senderName=user-core
 
-core.config.url=http://config.maatvirtue.net/1
+core.config.url=http://config.api.maatvirtue.net/1
