--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
 	compile 'net.maatvirtue:ws-utils:2.3.1'
+	compile 'net.maatvirtue:auth-lib:0.0.1'
 
 	compile 'org.hibernate:hibernate-validator:5.2.4.Final'
 }
