--- a/user-core/build.gradle
+++ b/user-core/build.gradle
@@ -5,19 +5,26 @@ buildscript {
 
 	dependencies {
 		classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE"
+		classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
 	}
 }
 
 apply plugin: 'spring-boot'
+apply plugin: 'io.spring.dependency-management'
+
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-config:1.1.1.RELEASE'
+	}
+}
 
 dependencies {
 	compile project(':user-api')
 
-	compile 'net.maatvirtue:config-api:1.1.0'
-
 	compile 'net.maatvirtue:common-lib:1.15.0'
 	compile 'net.maatvirtue:ws-utils:2.3.2'
 
+	compile "org.springframework.cloud:spring-cloud-starter-config"
 	compile "org.springframework.boot:spring-boot-starter-web"
 	compile "org.springframework.boot:spring-boot-starter-data-jpa"
 	compile "org.springframework.boot:spring-boot-starter-mail"
