added docker and service discovery

--- a/user-core/src/main/resources/bootstrap.properties
+++ b/user-core/src/main/resources/bootstrap.properties
@@ -1,1 +1,7 @@
-spring.cloud.config.uri: http://localhost:8082
+spring.application.name=user-core
+
+spring.cloud.consul.host=consul
+spring.cloud.consul.port=8500
+
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-core
