--- a/user-core/build.gradle
+++ b/user-core/build.gradle
@@ -4,17 +4,20 @@ buildscript {
 	}
 
 	dependencies {
-		classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE"
+		classpath "org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE"
 		classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
+		classpath 'se.transmode.gradle:gradle-docker:1.2'
 	}
 }
 
 apply plugin: 'spring-boot'
+apply plugin: 'docker'
 apply plugin: 'io.spring.dependency-management'
 
 dependencyManagement {
 	imports {
 		mavenBom 'org.springframework.cloud:spring-cloud-config:1.1.1.RELEASE'
+		mavenBom "org.springframework.cloud:spring-cloud-consul-dependencies:1.0.1.RELEASE"
 	}
 }
 
@@ -25,7 +28,9 @@ dependencies {
 	compile 'net.maatvirtue:ws-utils:2.3.2'
 
 	compile "org.springframework.cloud:spring-cloud-starter-config"
+	compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
 	compile "org.springframework.boot:spring-boot-starter-web"
+	compile 'org.springframework.boot:spring-boot-starter-actuator'
 	compile "org.springframework.boot:spring-boot-starter-data-jpa"
 	compile "org.springframework.boot:spring-boot-starter-mail"
 	compile "org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.2.0-SNAPSHOT"
@@ -40,4 +45,16 @@ dependencies {
 	compile 'ch.qos.logback:logback-classic:1.1.6'
 
 	runtime 'mysql:mysql-connector-java:5.1.38'
+}
+
+task buildDocker(type: Docker, dependsOn: build) {
+	tag = "maatvirtue/${project.name}"
+	push = true
+	dockerfile = file('src/main/docker/Dockerfile')
+	doFirst {
+		copy {
+			from jar
+			into stageDir
+		}
+	}
 }
