changed webservices version to v1 instead of 1

--- a/user-core/src/main/resources/application.properties
+++ b/user-core/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.mail.port=25
 spring.mail.username=test
 spring.mail.password=test
 
-cxf.path=/1/
+cxf.path=/v1/
 cxf.jaxrs.component-scan=true
 cxf.log.requests=true
 
