--- a/user-core/src/main/resources/application.properties
+++ b/user-core/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user?noAccessToProcedureBodies=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=1000
+spring.datasource.url=jdbc:mysql://user-db:3306/user?noAccessToProcedureBodies=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=1000
 spring.datasource.username=user
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
