--- a/user-core/src/main/resources/application.properties
+++ b/user-core/src/main/resources/application.properties
@@ -9,9 +9,10 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 #org.hibernate.dialect.MySQL5Dialect
 
 spring.mail.host=smtp.gmail.com
-spring.mail.port=25
-spring.mail.username=test
-spring.mail.password=test
+spring.mail.port=587
+spring.mail.username=test160424@gmail.com
+spring.mail.password=testpass
+spring.mail.test-connection=false
 
 cxf.path=/v1/
 cxf.jaxrs.component-scan=true
