--- a/user-core/src/main/resources/application.properties
+++ b/user-core/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=test160424@gmail.com
 spring.mail.password=testpass
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.quitwait=false
+spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.test-connection=false
 
 cxf.path=/v1/
