--- a/user-core/src/main/resources/application.properties
+++ b/user-core/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://user-db:3306/user?noAccessToProcedureBodies=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=1000
+spring.datasource.url=jdbc:mysql://mysql.nlacombe.net:3306/user?noAccessToProcedureBodies=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=1000
 spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.password=Aenga7ki
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 #db.dialect=org.hibernate.dialect.MySQLInnoDBDialect
