updated email settings for AWS SES

--- a/user-core/src/main/resources/application.properties
+++ b/user-core/src/main/resources/application.properties
@@ -8,10 +8,10 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 #db.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 #org.hibernate.dialect.MySQL5Dialect
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=email-smtp.us-east-1.amazonaws.com
 spring.mail.port=587
-spring.mail.username=test160424@gmail.com
-spring.mail.password=testpass
+spring.mail.username=AKIAIVQG2ZIWJ5WRN62A
+spring.mail.password=AqzX5g+TFlRydcsPLmOCCmJJF50N4zAKgUrLRDbGGElJ
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.quitwait=false
 spring.mail.properties.mail.smtp.starttls.enable=true
