fixed bug where sender email was incorrect

--- a/user-core/src/main/resources/application.properties
+++ b/user-core/src/main/resources/application.properties
@@ -21,4 +21,5 @@ cxf.path=/v1/
 cxf.jaxrs.component-scan=true
 cxf.log.requests=true
 
-email.senderName=user-core
+email.sender.name=user-core
+email.sender.email=noreply@nlacombe.net
