--- a/user-core/src/main/resources/bootstrap.properties
+++ b/user-core/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-core
 
-spring.cloud.consul.host=consul
-spring.cloud.consul.port=8500
+spring.cloud.consul.host=consul.nlacombe.net
+spring.cloud.consul.port=80
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-core
