--- a/user-core/src/main/resources/bootstrap.properties
+++ b/user-core/src/main/resources/bootstrap.properties
@@ -2,6 +2,7 @@ spring.application.name=user-core
 
 spring.cloud.consul.host=consul.nlacombe.net
 spring.cloud.consul.port=80
+spring.cloud.consul.discovery.prefer-ip-address=true
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-core
