--- a/user-core/src/main/resources/bootstrap.properties
+++ b/user-core/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
 spring.application.name=user-core
 
-spring.cloud.consul.host=consul.nlacombe.net
+spring.cloud.consul.host=consul
 spring.cloud.consul.port=80
-spring.cloud.consul.discovery.preferIpAddress=false
+spring.cloud.consul.discovery.preferIpAddress=true
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-core
