--- a/user-core/build.gradle
+++ b/user-core/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-actuator'
 	compile "org.springframework.boot:spring-boot-starter-data-jpa"
 	compile "org.springframework.boot:spring-boot-starter-mail"
-	compile "org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.2.0-SNAPSHOT"
+	compile "org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.1.7"
 
 	compile "org.flywaydb:flyway-core:4.0.3"
 
