--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ subprojects {
 
 	defaultTasks 'tasks'
 
-	group = 'net.maatvirtue'
+	group = 'net.nlacombe'
 	version = '1.0.10'
 
 	sourceCompatibility = 1.8
