--- a/user-ws/build.gradle
+++ b/user-ws/build.gradle
@@ -4,20 +4,26 @@ buildscript {
 	}
 
 	dependencies {
-		classpath "org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE"
-		classpath "io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE"
+		classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE"
+		classpath "io.spring.gradle:dependency-management-plugin:1.0.1.RELEASE"
 		classpath 'se.transmode.gradle:gradle-docker:1.2'
 	}
 }
 
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'docker'
 apply plugin: 'io.spring.dependency-management'
 
 dependencyManagement {
 	imports {
-		mavenBom 'org.springframework.cloud:spring-cloud-config:1.1.1.RELEASE'
-		mavenBom "org.springframework.cloud:spring-cloud-consul-dependencies:1.0.1.RELEASE"
+		mavenBom 'org.springframework.cloud:spring-cloud-config:1.3.0.RELEASE'
+		mavenBom "org.springframework.cloud:spring-cloud-consul-dependencies:1.1.3.RELEASE"
+	}
+}
+
+repositories {
+	maven {
+		url 'http://repository.apache.org/snapshots/'
 	}
 }
 
@@ -33,7 +39,7 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-actuator'
 	compile "org.springframework.boot:spring-boot-starter-data-jpa"
 	compile "org.springframework.boot:spring-boot-starter-mail"
-	compile "org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.1.7"
+	compile "org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.1.11-SNAPSHOT"
 
 	compile "org.flywaydb:flyway-core:4.0.3"
 
@@ -41,10 +47,10 @@ dependencies {
 
 	compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.8.1'
 
-	compile 'org.slf4j:slf4j-api:1.7.18'
-	compile 'ch.qos.logback:logback-classic:1.1.6'
+	compile 'org.slf4j:slf4j-api:1.7.25'
 
 	runtime 'mysql:mysql-connector-java:6.0.3'
+	runtime 'ch.qos.logback:logback-classic:1.2.3'
 }
 
 task buildDocker(type: Docker, dependsOn: build) {
