--- a/user-ws/build.gradle
+++ b/user-ws/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 	compile "org.springframework.boot:spring-boot-starter-mail"
 	compile "org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.1.11-SNAPSHOT"
 
-	compile "org.flywaydb:flyway-core:4.0.3"
+	compile 'org.flywaydb:flyway-core:4.1.2'
 
 	compile 'javax.inject:javax.inject:1'
 
@@ -49,7 +49,7 @@ dependencies {
 
 	compile 'org.slf4j:slf4j-api:1.7.25'
 
-	runtime 'mysql:mysql-connector-java:6.0.3'
+	runtime 'mysql:mysql-connector-java:6.0.6'
 	runtime 'ch.qos.logback:logback-classic:1.2.3'
 }
 
