--- a/user-ws/build.gradle
+++ b/user-ws/build.gradle
@@ -21,12 +21,6 @@ dependencyManagement {
 	}
 }
 
-repositories {
-	maven {
-		url 'http://repository.apache.org/snapshots/'
-	}
-}
-
 dependencies {
 	compile project(':user-api')
 
@@ -39,7 +33,7 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-actuator'
 	compile "org.springframework.boot:spring-boot-starter-data-jpa"
 	compile "org.springframework.boot:spring-boot-starter-mail"
-	compile "org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.1.11-SNAPSHOT"
+	compile "org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.1.12"
 
 	compile 'org.flywaydb:flyway-core:4.1.2'
 
