--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
 	compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
-	compile 'net.maatvirtue:ws-utils:2.3.2'
-	compile 'net.maatvirtue:auth-lib:1.0.1'
+	compile 'net.nlacombe:ws-utils:4.1.0'
+	compile 'net.nlacombe:auth-lib:2.0.0'
 
 	compile 'org.hibernate:hibernate-validator:5.2.4.Final'
 }
