--- a/user-ws/build.gradle
+++ b/user-ws/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 	compile project(':user-api')
 
 	compile 'net.maatvirtue:common-lib:1.15.0'
-	compile 'net.maatvirtue:ws-utils:2.3.2'
+	compile 'net.nlacombe:ws-utils:4.1.0'
 
 	compile "org.springframework.cloud:spring-cloud-starter-config"
 	compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
