--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
 	compile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
-	compile "net.nlacombe:ws-utils:5.0.0"
-	compile "net.nlacombe:auth-lib:8.0.0"
+	compile 'net.nlacombe:ws-utils:5.0.0'
 
 	compile 'org.hibernate:hibernate-validator:5.2.4.Final'
 }
