--- a/user-ws/build.gradle
+++ b/user-ws/build.gradle
@@ -24,9 +24,9 @@ dependencies {
 	compile project(':user-api')
 
 	compile 'net.nlacombe:common-lib:7.0.0'
-	compile 'net.nlacombe:crypto-lib:6.0.0'
-	compile "net.nlacombe:ws-utils:5.0.0"
-	compile "net.nlacombe:auth-lib:8.0.0"
+	compile 'net.nlacombe:crypto-lib:6.1.0'
+	compile 'net.nlacombe:ws-utils:5.0.0'
+	compile 'net.nlacombe:auth-lib:10.0.0'
 
 	compile "org.springframework.cloud:spring-cloud-starter-config"
 	compile "org.springframework.boot:spring-boot-starter-web"
