--- a/user-ws/src/main/resources/application.properties
+++ b/user-ws/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8082
 
 spring.datasource.url=jdbc:mysql://mysql.nlacombe.net:3306/user?noAccessToProcedureBodies=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=1000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.maxActive=1
 
 spring.mail.host=email-smtp.us-east-1.amazonaws.com
 spring.mail.port=587
