--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ gradle-app.setting
 secret.properties
 bootstrap.properties
 nlacombe-net_v2.pem
+gcp-service-account-credentials-nlacombe-net-prod.json
