--- a/user-ws/build.gradle
+++ b/user-ws/build.gradle
@@ -10,13 +10,23 @@ buildscript {
 	}
 }
 
+apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'docker'
 apply plugin: 'io.spring.dependency-management'
 
+java {
+	sourceCompatibility = project.javaVersion
+	targetCompatibility = project.javaVersion
+}
+
+def springCloudVersion = 'Hoxton.SR1'
+
 dependencyManagement {
 	imports {
 		mavenBom 'org.springframework.cloud:spring-cloud-config:2.0.0.RELEASE'
+		mavenBom "org.springframework.cloud:spring-cloud-starter-parent:${springCloudVersion}"
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
 
@@ -26,37 +36,36 @@ project.ext.gcloudProjectId = 'nlacombe-net-prod'
 String gcloudDockerImageUrl
 
 dependencies {
-	compile project(':user-api')
+	implementation project(':user-api')
 
-	compile 'net.nlacombe:common-lib:9.0.0'
-	compile 'net.nlacombe:crypto-lib:6.1.0'
-	compile 'net.nlacombe:ws-utils:5.0.0'
-	compile 'net.nlacombe:auth-lib:10.0.0'
+	implementation 'net.nlacombe:common-lib:9.0.0'
+	implementation 'net.nlacombe:crypto-lib:6.1.0'
+	implementation 'net.nlacombe:ws-utils:5.0.0'
+	implementation 'net.nlacombe:auth-lib:10.0.0'
 
-	compile 'org.springframework.cloud:spring-cloud-starter-config'
-	compile 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.springframework.boot:spring-boot-starter-actuator'
-	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compile 'org.springframework.boot:spring-boot-starter-mail'
-	compile 'org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.3.2'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.cloud:spring-cloud-gcp-starter'
+	implementation 'org.springframework.cloud:spring-cloud-gcp-starter-sql-mysql'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.apache.cxf:cxf-spring-boot-starter-jaxrs:3.3.2'
 
-	compile 'org.flywaydb:flyway-core:4.1.2'
+	implementation 'org.flywaydb:flyway-core:4.1.2'
+	implementation 'javax.inject:javax.inject:1'
+	implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.8.1'
+	implementation 'org.slf4j:slf4j-api:1.7.25'
 
-	compile 'javax.inject:javax.inject:1'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.17'
+	runtimeOnly 'ch.qos.logback:logback-classic:1.2.3'
+	runtimeOnly 'javax.xml.bind:jaxb-api:2.3.0'
+	runtimeOnly 'org.javassist:javassist:3.25.0-GA'
 
-	compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.8.1'
-
-	compile 'org.slf4j:slf4j-api:1.7.25'
-
-	runtime 'mysql:mysql-connector-java:8.0.17'
-	runtime 'ch.qos.logback:logback-classic:1.2.3'
-	runtime 'javax.xml.bind:jaxb-api:2.3.0'
-	runtime 'org.javassist:javassist:3.25.0-GA'
-
-	testCompile 'junit:junit:4.12'
-	testCompile 'org.springframework.boot:spring-boot-starter-test:2.0.3.RELEASE'
-	testCompile 'org.assertj:assertj-core:3.10.0'
-	testCompile 'org.mockito:mockito-core:2.19.0'
+	testImplementation 'junit:junit:4.12'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.0.3.RELEASE'
+	testImplementation 'org.assertj:assertj-core:3.10.0'
+	testImplementation 'org.mockito:mockito-core:2.19.0'
 }
 
 task buildDocker(type: Docker, dependsOn: assemble) {
