--- a/user-ws/src/main/resources/application.properties
+++ b/user-ws/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://mysql.nlacombe.net:3306/user?noAccessToProcedureBodies=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=1000
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.maxActive=1
 
@@ -16,3 +15,5 @@ cxf.jaxrs.component-scan=true
 cxf.log.requests=true
 email.sender.name=user-ws
 email.sender.email=noreply@nlacombe.net
+
+spring.cloud.gcp.credentials.location=classpath:/gcp-service-account-credentials-nlacombe-net-prod.json
