--- a/user-ws/build.gradle
+++ b/user-ws/build.gradle
@@ -99,7 +99,8 @@ task buildGcloudDockerImage(type: Exec, dependsOn: assemble) {
 task deployToProdGcloud(type: Exec, dependsOn: buildGcloudDockerImage) {
 	workingDir project.gcloudBuildDir
 	commandLine 'gcloud', 'beta', 'run', 'deploy', "${project.name}",
-			'--region', 'us-central1',
+			'--region', 'us-east1',
+			'--platform', 'managed',
 			'--memory', '500M',
 			'--image', gcloudDockerImageUrl
 }
