added k8s cpu limit

--- a/user-ws/src/main/k8s/k8s.yaml
+++ b/user-ws/src/main/k8s/k8s.yaml
@@ -22,6 +22,9 @@ spec:
               value: "80"
           ports:
             - containerPort: 80
+          resources:
+            requests:
+              cpu: 50m
 ---
 apiVersion: v1
 kind: Service
