--- a/user-ws/src/main/k8s/k8s.yaml
+++ b/user-ws/src/main/k8s/k8s.yaml
@@ -40,13 +40,12 @@ spec:
   ports:
     - port: 80
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: user-ws
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/frontend-entry-points: https
 spec:
   rules:
     - host: user-api.nlacombe.net
