--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.bat text eol=crlf
-*.sh text eol=lf
-Dockerfile text eol=lf
-gradlew text eol=lf
+*         text=auto
+*.txt     text
+*.bat     text eol=crlf
+*.sh      text eol=lf
